--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,6 +24,10 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.Substrate=True
+r.Substrate.OpaqueMaterialRoughRefraction=False
+r.Substrate.EnableLayerSupport=False
+r.Refraction.Blur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
